--- a/styles.css
+++ b/styles.css
@@ -223,7 +223,7 @@ body {
 }
 
 /* Portfolio Section Styling */
-#portfolio {
+#team {
     margin: 2% 0;
     padding: 2% 10%;
     background-color: #CCD5AD;
