--- a/services.css
+++ b/services.css
@@ -16,6 +16,7 @@ body {
 /* Header Styling */
 .portfolio-box {
     padding: 2% 10%;
+    display: flex;
     text-align: left;
     background-color:#CCD5AD;
     border: 1px solid #ccc;
